# Unofficial-OpenAI-Chat-Assistant-Manager

./: .env.example  README.md  __init__.py  api.py  assistant_management.py  chat_management.py  config.py  exceptions.py  logging_setup.py  requirements.txt  setup.cfg
docs/: CODE_OF_CONDUCT.md  README.md  contributing.md  installation.md
docs/api_reference/: README.md  assistant_management.md  chat_management.md
docs/user_guide/: README.md  advanced_usage.md  faq.md  getting_started.md
example/: example_chatbot.py
examples/: example_chatbot.py
src/pyaimanager/: __init__.py  assistant.py  assistant_manager.py  chat.py  conversation.py  http_requests.py  logging_setup.py
src/pyaimanager/utils/: exceptions.py  extract_error_message.py  http_requests.py  logging.py
tests/: base_test.py  run_tests.py  test_assistant_lifecycle.py  test_assistant_management.py  test_assistant_retrieval.py  test_conversation.py  test_create_assistant.py
