[metadata]
name = PyAIManager
version = 0.0.0
license = MIT
description = Unofficial python package for managing and interacting with OpenAIs custom assistant API
long_description = file: README.rst
author = Joe
author_email = joe@brownboxstudio.com
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    openai
    python-dotenv

[options.packages.find]
where=src